<resources>
    <string name="personalization_settings">Personalization</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="select_your_preferred_language">Select your preferred language</string>
    <string name="language_english">English</string>
    <string name="language_vietnamese">Tiếng Việt</string>
    <string name="language_chinese">中文 (Chinese)</string>
    <string name="language_french">Français (French)</string>
    <string name="language_german">Deutsch (German)</string>
    <string name="language_japanese">日本語 (Japanese)</string>
    <string name="language_korean">한국어 (Korean)</string>
    <string name="language_spanish">Español (Spanish)</string>
    <string name="language_russian">Русский (Russian)</string>
    <string name="language_thai">ไทย (Thai)</string>
    <string name="language_arabic">العربية (Arabic)</string>
    <string name="language_portuguese">Português (Portuguese)</string>
    <string name="language_portuguese_brazil">Português (Brazil)</string>
    <string name="language_hindi">हिन्दी (Hindi)</string>
    <string name="language_chinese_traditional">中文 (Traditional)</string>
    <string name="language_italian">Italiano (Italian)</string>
    <string name="language_indonesian">Bahasa Indonesia</string>
    <string name="language_change_confirm_title">Change Language</string>
    <string name="language_change_confirm_message">The app will restart to apply the new language. Continue?</string>
    <string name="confirm">Confirm</string>
    <string name="open_table_button">Open table</string>
    <string name="favorite_settings_title">Favorite Bar</string>
    <string name="favorite_settings_general">General</string>
    <string name="favorite_settings_temperatures">Temperatures</string>
    <string name="favorite_settings_atomic_properties">Atomic properties</string>
    <string name="favorite_settings_thermodynamics">Thermodynamics</string>
    <string name="unit_temperature">Temperatures</string>
    <string name="isotopes_title">Isotopes</string>
    <string name="other_settings">Advanced</string>
    <string name="experimental_title">Experimental Settings</string>
    <string name="experimental_text">Additional experimental settings</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache_text">-</string>
    <string name="submit_activity_title">Submit issue</string>
    <string name="submit_data_i">Data Issue</string>
    <string name="submit_issue">Issue</string>
    <string name="description">Description</string>
    <string name="submit_send">Submit issue</string>
    <string name="select_issue_type">Select issue type dropdown</string>
    <string name="send_issue_form">Send issue form</string>
    <string name="loading">Loading...</string>
    <string name="filter">Filter</string>
    <string name="ads_notice">Please note: this action may show ads</string>
    <string name="submit_title">Report Issue</string>
    <string name="submit_text">Report bugs and data errors</string>
    <string name="licenses_title">Licenses</string>
    <string name="licenses_text">Licenses of works used by Atomic</string>
    <string name="info_title">Information</string>
    <string name="info_text">App version and details</string>
    <string name="license_title">Licenses</string>
    <string name="activity_table_title">Tables</string>
    <string name="table_ph">pH-Indicators</string>
    <string name="table_ph_text">A pH-indicator table for colors on different acid/ base levels</string>
    <string name="table_electrochemical">Electrochemical Series</string>
    <string name="table_electrochemical_text">A table with an electrochemical series, sorted by (-) to (+) voltage</string>
    <string name="table_equations">Formulas</string>
    <string name="table_equations_text">A table containing formulas for math, physics and chemistry</string>
    <string name="table_solubility">Solubility Table</string>
    <string name="table_solubility_text">A table with information of different substances solubility</string>
    <string name="table_ionization">Ionization Energies</string>
    <string name="table_ionization_text">A table with different elements ionization energies</string>
    <string name="table_nuclide">Table of Nuclides</string>
    <string name="table_nuclide_text">A two-dimensional table of nuclide, with color differentiating decay type</string>
    <string name="open_ph_table">Open pH indicators table</string>
    <string name="open_electrochemical_table">Open electrochemical series table</string>
    <string name="open_equations_table">Open formulas table</string>
    <string name="open_ionization_table">Open ionization energies table</string>
    <string name="open_nuclide_table">Open nuclide table</string>
    <string name="open_solubility_table">Open solubility table</string>
    <string name="activity_unit_title">Table Units</string>
    <string name="activity_equations_title">Formulas</string>
    <string name="activity_ph_title">pH Indicators</string>
    <string name="activity_ph_acid">Acid</string>
    <string name="activity_ph_neutral">Neutral</string>
    <string name="activity_ph_alkaline">Alkaline</string>
    <string name="activity_ph_methyl_orange">Methyl-orange</string>
    <string name="activity_ph_bromothymol_blue">Bromothymol Blue</string>
    <string name="activity_ph_congo_red">Congo Red</string>
    <string name="activity_ph_phenolphthalein">Phenolphthalein</string>
    <string name="activity_io_title">Ionization Energies</string>
    <string name="twitter">https://www.twitter.com/jlindemanndev</string>
    <string name="instagram">https://www.instagram.com/jlindemanndev</string>
    <string name="facebook">https://www.facebook.com/jlindemanndev</string>
    <string name="homepage">https://www.jlindemann.se/homepage</string>
    <string name="solubility_info_t">Solubility Help</string>
    <string name="solubility_info_c">\"S: Soluble\nSs: Slightly Soluble\nI: Insoluble\"</string>
    <string name="electrochemical_series">Electrochemical Series</string>
    <string name="electrochemical_series_search">Search for Element</string>
    <string name="data_issue">Data Issue</string>
    <string name="bug">Bug</string>
    <string name="question">Question</string>
    <string name="chip_chemistry">Chemistry</string>
    <string name="chip_physics">Physics</string>
    <string name="chip_math">Mathematics</string>
    <string name="chip_reactions">Reactions</string>
    <string name="wikipedia_license">Wikipedia Commons</string>
    <string name="wikipedia_license_text">CREATIVE COMMONS CORPORATION IS NOT A LAW FIRM AND DOES NOT PROVIDE LEGAL SERVICES.
        DISTRIBUTION OF THIS LICENSE DOES NOT CREATE AN ATTORNEY-CLIENT RELATIONSHIP. CREATIVE COMMONS PROVIDES THIS INFORMATION ON AN \"AS-IS\" BASIS. CREATIVE COMMONS MAKES NO WARRANTIES REGARDING THE INFORMATION PROVIDED, AND DISCLAIMS LIABILITY FOR DAMAGES RESULTING FROM ITS USE.\n\nTHE WORK (AS DEFINED BELOW) IS PROVIDED UNDER THE TERMS OF THIS CREATIVE COMMONS PUBLIC LICENSE (\"CCPL\" OR \"LICENSE\").
        THE WORK IS PROTECTED BY COPYRIGHT AND/OR OTHER APPLICABLE LAW. ANY USE OF THE WORK OTHER THAN AS AUTHORIZED UNDER THIS LICENSE OR COPYRIGHT LAW IS PROHIBITED.
        BY EXERCISING ANY RIGHTS TO THE WORK PROVIDED HERE, YOU ACCEPT AND AGREE TO BE BOUND BY THE TERMS OF THIS LICENSE. TO THE EXTENT THIS LICENSE MAY BE CONSIDERED TO BE A CONTRACT, THE LICENSOR GRANTS YOU THE RIGHTS CONTAINED HERE IN CONSIDERATION OF YOUR ACCEPTANCE OF SUCH TERMS AND CONDITIONS.</string>
    <string name="sothree_license">Android Sliding Up Panel</string>
    <string name="sothree_license_text">Copyright 2015 Anton Lopyrev\n\nLicensed under the Apache License, Version 2.0 (the \"License\");you may not use this file except in compliance with the License.You may obtain a copy of the License at
    \n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n   Unless required by applicable law or agreed to in writing, softwaredistributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions andlimitations under the License.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="calculator">Calculator</string>
    <string name="element">Element</string>
    <string name="_1">1</string>
    <string name="molar_mass_calculator">Molar Mass Calculator</string>
    <string name="calculator_description">Calculate the molar mass of chemical compounds by entering element symbols and their quantities.</string>
    <string name="enter_chemical_formula">Enter Chemical Formula</string>
    <string name="quantity">Quantity</string>
    <string name="calculator_example">Example: H with quantity 2 = H₂</string>
    <string name="how_to_use">How to use</string>
    <string name="calculator_instructions">1. Enter the element symbol (e.g., H, O, C)\n2. Enter the quantity (subscript number)\n3. Press Enter to calculate the molar mass</string>
    <string name="element_hint_h">H</string>
    <string name="back_button">Back</string>
    <string name="wikipedia_button">Wikipedia</string>
    <string name="previous_button">Previous element</string>
    <string name="next_button">Next element</string>
    <string name="search_button">Search</string>
    <string name="close_search_button">Close search</string>
    <string name="no_results">No results</string>
    <string name="try_searching_for_another_word_or_check_your_spelling">Try searching for another word or check your spelling.</string>
    <string name="dictionary">Dictionary</string>
    <string name="search_for_dictionary_item">Search For Dictionary Item</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="periodic_table">Periodic Table</string>
    <string name="submit_data_issue">Submit Data Issue</string>
    <string name="search_for_formulas">Search For Formulas</string>
    <string name="experimental">Experimental</string>
    <string name="warning_these_settings_are_either_early_in_development_or_very_unstable_enable_at_your_own_risk">WARNING: These settings are either early in development or very unstable. Enable at your own risk!</string>
    <string name="enable_zoom_in_tables">Enable Zoom in tables</string>
    <string name="show_molar_mass">Show Molar Mass</string>
    <string name="show_stp_phase">Show STP Phase</string>
    <string name="atomic_properties">Atomic Properties</string>
    <string name="oxidation_states">Oxidation States:</string>
    <string name="electron_configuration">Electron Configuration:</string>
    <string name="electron_config_text">-</string>
    <string name="ion_charge">Ion Charge:</string>
    <string name="ion_charge_text">-</string>
    <string name="ionization_energies">Ionization Energies:</string>
    <string name="ionization_energies_text">-</string>
    <string name="atomic_radius_empirical">Atomic Radius (Empirical):</string>
    <string name="atomic_radius_e_text">-</string>
    <string name="atomic_radius_calculated">Atomic Radius (Calculated):</string>
    <string name="atomic_radius_text">-</string>
    <string name="covalent_radius">Covalent Radius:</string>
    <string name="covalent_radius_text">-</string>
    <string name="van_der_waals_radius">Van Der Waals Radius:</string>
    <string name="van_der_waals_radius_text">-</string>
    <string name="unit_converter_title">Unit Converter</string>
    <string name="unit_category_pressure">Pressure</string>
    <string name="unit_category_mass">Mass</string>
    <string name="unit_category_volume">Volume</string>
    <string name="unit_converter_value_hint">Value</string>
    <string name="unit_converter_from_hint">From</string>
    <string name="unit_converter_to_hint">To</string>
    <string name="unit_converter_swap">Swap units</string>
</resources>